--- a/docs/싱글톤 컨테이너.md
+++ b/docs/싱글톤 컨테이너.md
@@ -1,1 +1,53 @@
+# 싱글톤 컨테이너
+
+### 웹 애플리케이션과 싱글톤
+
+- **스프링은 태생이 기업용 온라인 서비스 기술을 지원하기 위해서 탄생했다.**
+- **대부분의 스프링 애플리케이션은 웹 애플리케이션이다. 물론 웹이 아닌 애플리케이션 개발도 얼마든지 개발할 수 있다.**
+- **웹 애플리케이션은 보통 여러 고객이 동시에 요청을 한다.**  
+![image](https://user-images.githubusercontent.com/106207558/223739977-715e6af3-6f57-436f-a421-882fbf8cf22d.png)  
+
+- **우리가 만들었던 스프링 없는 순수한 DI컨테이너인 AppConfig는 요청을 할 때 마다 객체를 새로 생성한다.**
+- **고객 트래픽이 초당 100개 객체가 생성되고 소멸된다 → 메모리 낭비가 심하다**
+- **해결방안은 해당 객체가 딱 1개만 생성되고, 공유하도록 설계하면 된다. → 싱글톤 패턴**
+
+### **싱글톤 패턴**
+
+- **클래스의 인스턴스가 딱 1개만 생성되는 것을 보장하는 디자인 패턴이다.**
+- **그래서 객체 인스턴스 2개 이상 생성하지 못하도록 막아야 한다.**
+    - **private 생성자를 사용해서 외부에서 임의로 new키워드를 사용하지 못하도록 막아야 한다.**
+
+1. **static 영역에 객체 Instance를 미리 하나 생성해서 올려둔다.**
+2. **이 객체 인스턴스가 필요하면 오직 ‘getInstance()’ 메서드를 통해서만 조회할 수 있다. 이 메서드를 호출하면 항상 같은 인스턴스를 반환한다.**
+3. **딱 1개의 객체 인스턴스만 존재해야 하므로, 생성자를 private으로 막아서 혹시라도 외부에서 new 키워드로 객체 인스턴스가 생성되는 것을 막는다.**
+
+**참고 : 싱글톤 패턴을 구현하는 방법은 여러가지가 있다.  여기서는 객체를 미리 생성해두는 가장 단순하고 안전한 방법을 소개했다.**
+
+**싱글톤 패턴을 적용하면 고객의 요청이 올 때 마다 생성하는 것이 아니라, 이미 만들어진 객체를 공유해서 효율적으로 사용할 수 있다. 하지만 싱글톤 패턴은 다음과 같은 수 많은 문제점들을 가지고 있다.**  
+### **싱글톤 패턴 문제점**
+
+- **싱글톤 패턴을 구현하는 코드 자체가 많이 들어간다.**
+- **의존관계상 클라이언트가 구체 클래스에 의존한다. → DIP를 위반한다.**
+- **클라이언트가 구체 클래스에 의존해서 OCP원칙을 위반할 가능성이 높다.**
+- **테스트하기 어렵다.**
+- **내부 속성을 변경하거나 초기화 하기 어렵다.**
+- **private 생성자로 자식 클래스를 만들기 어렵다.**
+- **결론적으로 유연성이 떨어진다.**
+- **안티패턴으로 불리기도 한다.**
+
+### **@Configuration과 바이코드 조작의 마법**
+
+**스프링 컨테이너는 싱그톤 레지스트리이다. 따라서 스프링 빈이 싱글톤이 되도록 보장해주어야 한다. 그런데 스프링이 자바 코드까지 어떻게 하기는 어렵다. 그래서 스프링은 클래스의 바이트코드를 조작하는 라이브러리를 사용한다. 모든 비밀은 @Configuration을 적용한 AppConfig에 있다**  
+![image](https://user-images.githubusercontent.com/106207558/223740173-9ea81242-8b68-4223-a2b0-44de9fe6c2b5.png)  
+**스프링이 CGLIB라는 바이트 코드 조작 라이브러리를 사용해서 AppConfig 클래스를 상속받은 임의의 다른 클래스를 만들고, 그 다른 클래스를 스프링 빈으로 등록한다.**
+
+- **@Bean이 붙은 메서드마다 이미 스프링 빈이 존재하면 존재하는 빈을 반환하고, 스프링 빈이 없으면 스프링 빈으로 등록하고 반환하는 코드가 동적으로 만들어진다.**
+- **덕분에 싱글톤이 보장되는 것이다.**
+
+**참고 “AppConfig@CGLIB은 AppConfig의 자식 타입이므로, AppConfig로 조회 할 수 있다.**
+
+### **@Configuration을 적용하지 않고, @Bean만 적용하면 어떻게 될까?**
+
+- **@Configuration을 붙이면 바이트코드를 조작하는 CGLIB 기술을 사용해서 싱글톤을 한다.,**
+- **@Bean만 적용하면 스프링컨테이너에 빈으로 등록은 하지만 싱글톤이 보장되지 않는다.**
 
